# smap

./: ChangeLog  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in  debugcat.texi  ex-meta1.texi  gendocs_template  macros.texi  mastermenu.el  smap.info  smap.texi  smapflow.eps  smapflow.fig  smapflow.txt  sockmap.texi  version.texi
gint/: Makefile.in  gint.mk  guile.m4
include/: Makefile.am  Makefile.in
include/smap/: Makefile.am  Makefile.in  diag.h  kwtab.h  module.h  parseopt.h  printf.h  stream.h  streamdef.h  url.h  wordsplit.h
lib/: Makefile.am  Makefile.in  asnprintf.c  asprintf.c  debug.c  diag.c  fileoutstr.c  kwtab.c  parseopt.c  progname.c  sockmapstr.c  stderr.c  stream.c  stream_printf.c  stream_vprintf.c  syslog.c  syslogstr.c  tracestr.c  url.c  vasnprintf.c  wordsplit.c  xscript.c
libltdl/: Makefile.in
modules/: Makefile.am  Makefile.in
modules/echo/: Makefile.am  Makefile.in  echo.c
modules/guile/: Makefile.am  Makefile.in  getpw.scm  guile.c  guile.x
modules/ldap/: Makefile.am  Makefile.in  ldap.c
modules/mailutils/: Makefile.am  Makefile.in  mailutils.c
modules/mysql/: Makefile.am  Makefile.in  mysql.c
modules/postgres/: Makefile.am  Makefile.in  postgres.c
modules/sed/: Makefile.am  Makefile.in  sed.c  transform.c  transform.h
src/: Makefile.am  Makefile.in  cfg.c  close-fds.c  cmdline.c  cmdline.opt  common.h  getopt.m4  log.c  mem.c  module.c  query.c  smapc.c  smapccmd.c  smapccmd.opt  smapd.c  smapd.cfin  smapd.h  srvman.c  srvman.h  userprivs.c
